изменил на коллекции чтобы можно было модифицировать